# vtk2pov

./: CMakeLists.txt  README.md  cone.pov  cone3.pov  cone3.povt  cone_1.vtp  driver.py  driver.qsub  pov.ini  pov.pov  vtk2pov.cpp  wave_1.vtp
data/: cone.pvtp  cone3.pov  cone3.povv  cone_0.vtp  wave.pov  wave.pvtp  wave_0.vtp
patch/: 0001-intorudce-mesh3-object.patch
